--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.10"
 fastapi = {extras = ["all"], version = "^0.115.5"}
 pydantic-settings = "^2.6.1"
 better-profanity = "^0.7.0"
+aiokafka = "^0.12.0"
+orjson = "^3.10.11"
 
 
 [build-system]
